--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     ports:
       - 4000:4000
     volumes:
-      - .:/opt/hello
+      - .:/opt/spike-phoenix/
     depends_on:
       - db
